--- a/client/index.html
+++ b/client/index.html
@@ -1,41 +1,64 @@
-<canvas  id="ctx" width="800" height="800" style="border:5px solid rgb(117, 209, 12); transition: all ease-in-out 5s;"></canvas>
+<canvas  id="ctx" width="500" height="500" style="border:1px solid rgb(117, 209, 12); transition: all ease-in-out 5s;"></canvas>
+
+<div id="chat.text" style="width: 500px;height:100px;overflow-y:scroll">
+    <div>Hello!</div>
+</div>
+
+<form id="chat-form">
+    <input id="chat-input" type="text" style="width:500;"><input>
+</form>
 
 <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 <script>
-    var ctx = document.getElementById("ctx"). 
-    getContext("2d")
+    var chatText = document.getElementById('chat-text')
+    var chatInput = document.getElementById('chat-input')
+    var chatForm = document.getElementById('chat-form')
+    var ctx = document.getElementById("ctx").getContext("2d")
     ctx.font = '30px Arial'
-    
 
     var socket = io()
 
     socket.on('newPositions',function(data){
         console.log(data)
         ctx.clearRect(0,0,800,800)
-        for(var i = 0 ; i < data.length; i++){
-            ctx.fillText(data[i].number,data[i].x,data[i].y)
+        for(var i = 0 ; i < data.player.length; i++){
+            ctx.fillText(data.player[i].number,data.player[i].x,data.player[i].y)
+
+        for(var i = 0 ; i < data.bullet.length; i++)
+            ctx.fillRect(data.bullet[i].x-5,data.bullet[i].y-5,10,10)
         }
+
+socket.on('addToChat',function(data){
+        chatText.innerHTML += '<div>' + data + '</div>'
+
+})
+    chatForm.onsubmit = function(e){
+        e.preventDefault()
+        socket.emit('sendMsgToServer',chatInput.value)
+        chatInput.value = ''
+    }
+
     })
 
     document.onkeydown = function(event){
         if(event.keyCode === 68)
             socket.emit('keyPress',{inputId:'right',state:true})
-        else if(event.keyCode === 87)
+        else if(event.keyCode === 83)
             socket.emit('keyPress',{inputId:'down',state:true})
         else if(event.keyCode === 65)
             socket.emit('keyPress',{inputId:'left',state:true})
-        else if(event.keyCode === 83) 
+        else if(event.keyCode === 87) 
             socket.emit('keyPress',{inputId:'up',state:true})
     }
 
     document.onkeyup = function(event){
         if(event.keyCode === 68)
             socket.emit('keyPress',{inputId:'right',state:false})
-        else if(event.keyCode === 87)
+        else if(event.keyCode === 83)
             socket.emit('keyPress',{inputId:'down',state:false})
         else if(event.keyCode === 65)
             socket.emit('keyPress',{inputId:'left',state:false})
-        else if(event.keyCode === 83) 
+        else if(event.keyCode === 87) 
             socket.emit('keyPress',{inputId:'up',state:false})
 
     }
