read readme pls

--- a/client/index.html
+++ b/client/index.html
@@ -98,51 +98,30 @@
             })
 
     }
-</script>
 
 
 
-<script>
-    var allowedKeys = {
-        37: 'left',
-        38: 'up',
-        39: 'right',
-        40: 'down',
-        65: 'a',
-        66: 'b'
-    };
+    document.onmousedown = function(event) {
+        socket.emit('keyPress', {
+            inputId: 'attack',
+            state: true
+        });
+    }
 
-    // the 'official' Konami Code sequence
-    var konamiCode = ['up', 'up', 'down', 'down', 'left', 'right', 'left', 'right', 'b', 'a'];
+    document.onmouseup = function(event) {
+        socket.emit('keyPress', {
+            inputId: 'attack',
+            state: false
+        });
+    }
 
-    // a variable to remember the 'position' the user has reached so far.
-    var konamiCodePosition = 0;
-
-    // add keydown event listener
-    document.addEventListener('keydown', function(e) {
-        // get the value of the key code from the key map
-        var key = allowedKeys[e.keyCode];
-        // get the value of the required key from the konami code
-        var requiredKey = konamiCode[konamiCodePosition];
-
-        // compare the key with the required key
-        if (key == requiredKey) {
-
-            // move to the next key in the konami code sequence
-            konamiCodePosition++;
-
-            // if the last key is reached, activate cheats
-            if (konamiCodePosition == konamiCode.length) {
-                activateCheats();
-                konamiCodePosition = 0;
-            }
-        } else {
-            konamiCodePosition = 0;
-        }
-    });
-
-    function activateCheats() {
-
-        socket.emit('wanker')
+    document.onmousemove = function(event) {
+        var x = -250 + event.clientX - 8
+        var y = -250 + event.clientY - 8
+        var angle = Math.atan2(y, x) / Math.PI * 180
+        socket.emit('keyPress', {
+            inputId: 'mouseAngle',
+            state: angle
+        });
     }
 </script>
