login system ""working""

--- a/client/index.html
+++ b/client/index.html
@@ -1,23 +1,73 @@
-<canvas id="ctx" width="500" height="500" style="border:1px solid rgb(117, 209, 12); transition: all ease-in-out 5s;"></canvas>
-
-<div id="chat-text" style="width: 500px;height:100px;overflow-y:scroll">
-    <div>Hello!</div>
+<div id="signDiv">
+    Username: <input id="signDiv-username" type="text"></input><br> Password: <input id="signDiv-password" type="password"></input>
+    <button id="signDiv-signIn">Sign In</button>
+    <button id="signDiv-signUp">Sign Up</button>
 </div>
 
-<form id="chat-form">
-    <input id="chat-input" type="text" style="width:500;">
-    <input type="submit">
-</form>
+<div id="gameDiv" style="display:none;">
+    <canvas id="ctx" width="500" height="500" style="border:1px solid rgb(117, 209, 12); transition: all ease-in-out 5s;"></canvas>
+
+    <div id="chat-text" style="width: 500px;height:100px;overflow-y:scroll">
+        <div>Hello!</div>
+    </div>
+
+    <form id="chat-form">
+        <input id="chat-input" type="text" style="width:500;">
+        <input type="submit">
+    </form>
+</div>
 
 <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 <script>
+    var socket = io()
+
+    //SIGN
+    var signDiv = document.getElementById('signDiv')
+    var signDivUsername = document.getElementById('signDiv-username')
+    var signDivSignIn = document.getElementById('signDiv-signIn')
+    var signDivSignUp = document.getElementById('signDiv-signUp')
+    var signDivPassword = document.getElementById('signDiv-password')
+
+    signDivSignIn.onclick = function() {
+        socket.emit('signIn', {
+            username: signDivUsername.value,
+            password: signDivPassword.value
+        })
+
+        signDivSignUp.onclick = function() {
+            socket.emit('signUp', {
+                username: signDivUsername.value,
+                password: signDivPassword.value
+            })
+        }
+
+        socket.on('signInResponse', function(data) {
+            if (data.success) {
+                signDiv.style.display = 'none'
+                gameDiv.style.display = 'inline-block'
+            } else
+                alert("Sign in unsuccessful.")
+        })
+
+        socket.on('signUpResponse', function(data) {
+            if (data.success) {
+                alert("Sign up successful.")
+            } else
+                alert("Sign up unsuccessful.")
+        })
+    }
+
+
+
+
+
+    //GAME
     var chatText = document.getElementById('chat-text')
     var chatInput = document.getElementById('chat-input')
     var chatForm = document.getElementById('chat-form')
     var ctx = document.getElementById("ctx").getContext("2d")
     ctx.font = '30px Arial'
 
-    var socket = io()
 
     socket.on('newPositions', function(data) {
         console.log(data)
@@ -39,10 +89,6 @@
 
     })
 
-    socket.on('wanker', function(data) {
-        alert(data)
-
-    })
 
     chatForm.onsubmit = function(e) {
         e.preventDefault()
